<resources>
    <string name="app_name">Little Chat</string>
    <string name="welcome_to">Welcome to LittleChat</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile">Profile</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="find_friends">Find Friends</string>
    <string name="send_request">Send Request</string>
    <string name="cancel_request">Cencel Request</string>
    <string name="accept_request">Accept Request</string>
    <string name="send_message">Send Message</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="home">Home</string>
    <string name="signup">SignUp</string>
    <string name="create_group">Create Group</string>
    <string name="my_groups">My Groups</string>
    <string name="group_chat">Group Chat</string>
    <string name="groups">Groups</string>
    <string name="logout_alert">Are you sure you want to logout?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="I_agree">I Agree With</string>
    <string name="back_icon">Back icon</string>
    <string name="google_icon">Google login icon</string>
    <string name="Implementation_in_progress">Implementation in progress!</string>
    <string name="confirm">Confirm</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="alert">Alert</string>
    <string name="please_indicate"><![CDATA[Please indicate that you have read and agree to the Terms & Conditions.]]></string>
    <string name="enter_email">Enter Your Email!</string>
    <string name="enter_password">Enter Your Password!</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="enter_confirm_password">Enter your password again in confirm password field</string>
    <string name="password_not_match">Passwords do not match.</string>
    <string name="email_sent">A verification email has been sent to <b>%s</b>, please verify the email then login></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="please_type">Please type any message.</string>
    <string name="connect_to_internet">Please connect to internet first.</string>
    <string name="empt">.</string>
    <string name="reject_request">Reject Request</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="invert_theme">Invert Theme</string>
    <string name="dynamic_theme">Dynamic Theme</string>
    <string name="yes">Yes</string>
    <string name="no_requests">No requests found!</string>
    <string name="update_profile">Update Profile</string>
    <string name="permission_denied">Permission Denied!</string>
    <string name="save">Save</string>
    <string name="enter_valid_name">Please enter a valid name.</string>
    <string name="enter_valid_number">Please enter a valid number.</string>
    <string name="profile_updated">Profile Updated Successfully!</string>
    <string name="require_Storage_permission">Require storage permission!</string>
    <string name="allow_permission_msg">To upload image you need to allow storage permission, by taping the \"Yes\" button you will be redirected to permission screen where you can allow the storage permssion and then can use the image upload feature.</string>
    <string name="update_group">Update Group</string>
    <string name="group_info">Group Info</string>
    <string name="delete_group">Delete Group</string>
    <string name="leave_Group">Leave Group</string>
    <string name="upload_image">Upload Image</string>
    <string name="group_name">Group Name</string>
    <string name="group_created">Group created successfully!</string>
    <string name="group_updated">Group updated successfully!</string>
    <string name="unfriend">Unfriend</string>
    <string name="something_wrong">Something went wrong, please try again.</string>
    <string name="friend_removed">%s has been removed from your friend list.</string>
    <string name="must_be_two_members">Please select at-least two members to create or update the group.</string>
    <string name="group_left_success">Group left successfully!</string>
    <string name="group_delete_success">Group deleted successfully!</string>
    <string name="remove_friend_warning">Are you sure you want to remove this person from your friend list?</string>
    <string name="delete_group_warning">Are you sure you want to delete this group?</string>
    <string name="leave_group_warning">Are you sure you want to leave this group?</string>
    <string name="admin">admin</string>
    <string name="no_friends">Hi %s, please click the "+" button on bottom right corner to find people and add them to the list :)</string>
    <string name="no_groups">No groups yet! click the "+" button on bottom right corner to create one and add your friends in it :)</string>
    <string name="create_profile">Please create your profile to continue.</string>
    <string name="reset_password">Reset your password!</string>
    <string name="reset_email_msg">We will send you a link to reset the password on the email above.</string>
    <string name="we_have_sent_link">We have sent you a link to change password, please change and retry login!</string>
    <string name="write_a_message">Write a message...</string>
</resources>
