<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Profile">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:padding="7dp"
            android:src="@drawable/back_white"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ivBack"
            android:layout_centerVertical="true"
            android:text="@string/profile"
            android:textStyle="bold"
            android:textColor="@color/white"
            />


        <ImageView
            android:id="@+id/btn_logout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/logout" />

    </RelativeLayout>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/large_margin">


        <com.app.littlechat.utility.CircleImageView
            android:id="@+id/ivImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"/>


        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/small_margin"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"
            android:singleLine="true"
            android:text=""
            android:textSize="@dimen/textSizeLarge" />


        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/small_margin"
            android:gravity="center_vertical"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="@dimen/textSizeLarge" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/small_margin"
            android:gravity="center_vertical"
            android:hint="@string/phone_number"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLength="10"
            android:singleLine="true"
            android:text=""
            android:textSize="@dimen/textSizeLarge" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin">
            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="@dimen/small_margin"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:visibility="gone"
                android:textSize="@dimen/textSizeLarge" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="@dimen/small_margin"
                android:text="@string/send_request"
                android:textAllCaps="true"
                android:visibility="gone"
                android:textSize="@dimen/textSizeLarge" />
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="@dimen/small_margin"
                android:text="@string/cancel_request"
                android:textAllCaps="true"
                android:visibility="gone"
                android:textSize="@dimen/textSizeLarge" />
            <Button
                android:id="@+id/btn_accept"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="@dimen/small_margin"
                android:text="@string/accept_request"
                android:textAllCaps="true"
                android:visibility="gone"
                android:textSize="@dimen/textSizeLarge" />
            <Button
                android:id="@+id/btn_message"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="@dimen/small_margin"
                android:text="@string/send_message"
                android:textAllCaps="true"
                android:visibility="gone"
                android:textSize="@dimen/textSizeLarge" />
        </RelativeLayout>


    </LinearLayout>


</LinearLayout>
