<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                tools:context=".Login">


    <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="@dimen/medium_margin"
            android:src="@drawable/back" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scrollbars="none">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_back"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/large_margin_xtra"
                    android:paddingRight="@dimen/large_margin_xtra">

                <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:gravity="center"
                        android:src="@mipmap/ic_launcher"
                        android:textSize="@dimen/textSizeXtraLarger"
                        android:textStyle="bold" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:text="@string/login"
                        android:textColor="@color/text_color_gray"
                        android:textSize="@dimen/textSizeXtraLarger" />



                    <EditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/small_margin"
                            android:gravity="center_vertical"
                            android:hint="@string/email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"
                            android:text=""/>




                    <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/small_margin"
                            android:gravity="center_vertical"
                            android:hint="@string/password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:text="" />

                <Button
                        android:id="@+id/btn_login"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="@dimen/large_margin_xtra"
                        android:layout_marginBottom="@dimen/small_margin"
                        android:layout_weight="1"
                        android:text="@string/login"
                        android:textAllCaps="true" />


                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/large_margin_xtra">

                    <TextView
                            android:id="@+id/tv_or"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_margin="@dimen/small_margin"
                            android:text="@string/or"
                            android:textSize="@dimen/textSizeXtraLarger" />

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_centerVertical="true"
                            android:layout_toLeftOf="@id/tv_or"
                            android:background="@color/text_color_gray" />

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@id/tv_or"
                            android:background="@color/text_color_gray" />


                </RelativeLayout>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/large_margin_xtra"
                        android:orientation="horizontal">

                    <ImageView
                            android:id="@+id/iv_fb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/medium_margin"
                            android:src="@mipmap/ic_launcher" />

                    <ImageView
                            android:id="@+id/iv_google"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/medium_margin"
                            android:src="@mipmap/ic_launcher" />

                </LinearLayout>


            </LinearLayout>


            <TextView
                    android:id="@+id/tv_forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/small_margin"
                    android:padding="@dimen/medium_margin"
                    android:text="@string/forgot_password"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/text_color_gray"
                    android:textSize="@dimen/textSizeSmall" />

        </LinearLayout>
    </ScrollView>

    <!--<com.facebook.login.widget.LoginButton-->
            <!--android:id="@+id/login_button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginTop="30dp"-->
            <!--android:layout_marginBottom="30dp"-->
            <!--android:visibility="gone" />-->




</RelativeLayout>
